--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>DevChallenge</title>
 </head>
 <body>
-    <header>
+    <header class="menu">
         <h1>DevChallenge</h1>
         <nav>
             <ul>
